added small button collection

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <p>Paragraph 2</p>
         <p>Paragraph 3</p>
         <p>Paragraph 4</p>
-        <a href="#">Link</a>
+        <a href="#">Link</a></br>
+        <a href="#" class="button btn-white" >Button White</a>
+        <a href="#" class="button btn-blue" >Button Blue</a>
+        <a href="#" class="button btn-red" >Button Red</a>
+        <a href="#" class="button btn-green" >Button Green</a>
     </body>
 </html>
