--- a/index.html
+++ b/index.html
@@ -9,20 +9,39 @@
         <link rel="stylesheet" href="css/feather.css">
     </head>
     <body>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5</h5>
-        <h6>Heading 6</h6>
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-        <p>Paragraph 3</p>
-        <p>Paragraph 4</p>
-        <a href="#">Link</a></br>
-        <a href="#" class="button btn-white" >Button White</a>
-        <a href="#" class="button btn-blue" >Button Blue</a>
-        <a href="#" class="button btn-red" >Button Red</a>
-        <a href="#" class="button btn-green" >Button Green</a>
+        <div class="nav nav-light">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div class="nav nav-dark">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="container">
+            <h1>Heading 1</h1>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+            <h4>Heading 4</h4>
+            <h5>Heading 5</h5>
+            <h6>Heading 6</h6>
+            <p>Paragraph 1</p>
+            <p>Paragraph 2</p>
+            <p>Paragraph 3</p>
+            <p>Paragraph 4</p>
+            <a href="#">Link</a></br>
+            <a href="#" class="button btn-white" >Button White</a>
+            <a href="#" class="button btn-blue" >Button Blue</a>
+            <a href="#" class="button btn-red" >Button Red</a>
+            <a href="#" class="button btn-green" >Button Green</a>
+        </div>
     </body>
 </html>
