--- a/index.html
+++ b/index.html
@@ -43,5 +43,55 @@
             <a href="#" class="button btn-red" >Button Red</a>
             <a href="#" class="button btn-green" >Button Green</a>
         </div>
+        
+        <div class="container-transparent">
+            <h4>12 column grid</h4>
+        </div>
+
+            <div class="container-transparent">
+                <div class="grid one">
+                    <p>one</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid six">
+                    <p>six</p>
+                </div>
+                <div class="grid three">
+                    <p>three</p>
+                </div>
+            </div>
+
+            <div class="container-transparent">
+                <div class="grid four">
+                    <p>four</p>
+                </div>
+                <div class="grid four">
+                    <p>four</p>
+                </div>
+                <div class="grid four">
+                    <p>four</p>
+                </div>
+            </div>
+
+            <div class="container-transparent">
+                <div class="grid three">
+                    <p>three</p>
+                </div>
+                <div class="grid three">
+                    <p>three</p>
+                </div>
+                <div class="grid three">
+                    <p>three</p>
+                </div>
+                <div class="grid three">
+                    <p>three</p>
+                </div>
+            </div>
+            </br></br>
+            </br></br>
+            </br></br>
+            </br></br>
     </body>
 </html>
