removed floating on grid

--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
         <div class="container-transparent">
             <h4>12 column grid</h4>
         </div>
+            <div class="container-transparent">
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+                <div class="grid two">
+                    <p>two</p>
+                </div>
+            </div>
 
             <div class="container-transparent">
                 <div class="grid one">
