removed grid row

--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
             <a href="#" class="button btn-blue" >Button Blue</a>
             <a href="#" class="button btn-red" >Button Red</a>
             <a href="#" class="button btn-green" >Button Green</a>
-        </div>
         
-        <div class="container-transparent">
+        <div class="container">
             <h4>12 column grid</h4>
         </div>
-            <div class="container-transparent">
+            <div class="container">
                 <div class="grid two">
                     <p>two</p>
                 </div>
@@ -66,9 +65,7 @@
                 <div class="grid two">
                     <p>two</p>
                 </div>
-            </div>
 
-            <div class="container-transparent">
                 <div class="grid one">
                     <p>one</p>
                 </div>
@@ -81,9 +78,7 @@
                 <div class="grid three">
                     <p>three</p>
                 </div>
-            </div>
 
-            <div class="container-transparent">
                 <div class="grid four">
                     <p>four</p>
                 </div>
@@ -93,21 +88,7 @@
                 <div class="grid four">
                     <p>four</p>
                 </div>
-            </div>
 
-            <div class="container-transparent">
-                <div class="grid three">
-                    <p>three</p>
-                </div>
-                <div class="grid three">
-                    <p>three</p>
-                </div>
-                <div class="grid three">
-                    <p>three</p>
-                </div>
-                <div class="grid three">
-                    <p>three</p>
-                </div>
             </div>
             </br></br>
             </br></br>
