added grey and black button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <p>Paragraph 4</p>
             <a href="#">Link</a></br>
                 <a href="#" class="button btn-white" >Button White</a>
+                <a href="#" class="button btn-grey" >Button Grey</a>
+                <a href="#" class="button btn-black" >Button Black</a>
                 <a href="#" class="button btn-blue" >Button Blue</a>
                 <a href="#" class="button btn-red" >Button Red</a>
                 <a href="#" class="button btn-green" >Button Green</a>
