added grid background-color and border for example page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             <h4>12 column grid</h4>
         </div>
 
+        <style>
+            .grid {
+                margin: 10px -1px;
+                background-color: #DDD;
+                border: 1px solid black;
+            }
+        </style>
+
         <div class="container">
             <div class="grid two">
                 <p>two</p>
