added footer with links

--- a/index.html
+++ b/index.html
@@ -116,5 +116,32 @@
             </div>
         </div>
 
+        <div class="footer">
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+        </div>
+
     </body>
 </html>
