made custom grid rule for footer

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                 background-color: #DDD;
                 border: 1px solid black;
             }
+
+            .footer .grid {
+                text-align: center;
+                float:left;
+                margin: 10px 0px;
+                border: none;
+                background-color: #e8eae8;
+            }
         </style>
 
         <div class="container">
