--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                 float:left;
                 margin: 10px 0px;
                 border: none;
-                background-color: #e8eae8;
             }
         </style>
 
@@ -124,7 +123,33 @@
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer footer-light">
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+            <div class="grid four">
+                <ul>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                    <li><a href="#">Footer Link</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer footer-dark">
             <div class="grid four">
                 <ul>
                     <li><a href="#">Footer Link</a></li>
