--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                 background-color: #DDD;
                 border: 1px solid black;
             }
+
+            .footer .grid {
+                text-align: center;
+                float:left;
+                margin: 10px 0px;
+                border: none;
+            }
         </style>
 
         <div class="container">
@@ -169,5 +176,6 @@
             </div>
         </div>
 
+    
     </body>
 </html>
